fixed icons and scroll on small devices

--- a/src/components/sectionInfo/sectionInfo.css
+++ b/src/components/sectionInfo/sectionInfo.css
@@ -8,7 +8,7 @@
     bottom: 0px;
     width: 100%;
     background-color: #fff;
-    padding: 201px 0 30px;
+    padding: 201px 0 0;
     transform: translateY(200%);
 }
 
@@ -288,7 +288,7 @@
 }
 
 
-.user-info.time {
+.user-info.time >div{
     display: flex;
     align-items: center;
     width: 100%;
@@ -311,5 +311,12 @@
 
 
 .section-info  .scrolling-block {
-    min-height: calc(100vh - 50px);
+    min-height: calc(100vh - 46px);
 }
+
+@media (max-width: 420px) { 
+    .section-info__content {
+        height: calc(100vh - 225px);
+    }
+}
+  
